@@ -1,9 +1,9 @@
-Moreton Bay DHCP Server
+udhcp server/client package
 -----------------------
 
+Russ Dill <Russ.Dill@asu.edu>
 Matthew Ramsay	<matthewr@moreton.com.au>
 Chris Trew <christ@moreton.com.au>
-Russ Dill <Russ.Dill@asu.edu>
 
 Other Credits:
 --------------
